@@ -877,6 +877,17 @@ Currently the default value is 512, the minimum is 128, and the maximum is
 2048.
 </td>
 </tr>
+<tr>
+<td>
+<tt>WINDIVERT_PARAM_QUEUE_SIZE</tt>
+</td>
+<td>
+Sets the maximum number of bytes that can be stored in the packet queue for
+<a href="#divert_recv"><tt>WinDivertRecv()</tt></a>.
+Currently the default value is 4194304 (4MB), the minimum is 4096 (4KB),
+and the maximum is 33554432 (32MB).
+</td>
+</tr>
 </table>
 </center>
 </p>
