@@ -86,9 +86,10 @@ typedef enum
 typedef enum
 {
     WINDIVERT_PARAM_QUEUE_LEN  = 0,     /* Packet queue length. */
-    WINDIVERT_PARAM_QUEUE_TIME = 1      /* Packet queue time. */
+    WINDIVERT_PARAM_QUEUE_TIME = 1,     /* Packet queue time. */
+    WINDIVERT_PARAM_QUEUE_SIZE = 2      /* Packet queue size. */
 } WINDIVERT_PARAM, *PWINDIVERT_PARAM;
-#define WINDIVERT_PARAM_MAX             WINDIVERT_PARAM_QUEUE_TIME
+#define WINDIVERT_PARAM_MAX             WINDIVERT_PARAM_QUEUE_SIZE
 
 #ifndef WINDIVERT_KERNEL
 
